// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`OptimizeMacroTemporariesVisitor stores one-use temporaries directly in macro parameters 1`] = `
[
  [
    "datapack/data/load/function/_private/init.mcfunction",
    
"# Reset scoreboards so packs can set values accurate for current load.
scoreboard objectives add load.status dummy
scoreboard players reset * load.status"
,
  ],
  [
    "datapack/data/load/tags/function/_private/init.json",
    
"{
  "replace": false,
  "values": [
    "load:_private/init"
  ]
}"
,
  ],
  [
    "datapack/data/load/tags/function/_private/load.json",
    
"{
  "replace": false,
  "values": [
    "#load:_private/init",
    {
      "id": "#load:pre_load",
      "required": false
    },
    {
      "id": "#load:load",
      "required": false
    },
    {
      "id": "#load:post_load",
      "required": false
    }
  ]
}"
,
  ],
  [
    "datapack/data/load/tags/function/load.json",
    
"{
  "replace": false,
  "values": [
    "test:__init__"
  ]
}"
,
  ],
  [
    "datapack/data/load/tags/function/post_load.json",
    
"{
  "replace": false,
  "values": []
}"
,
  ],
  [
    "datapack/data/load/tags/function/pre_load.json",
    
"{
  "replace": false,
  "values": []
}"
,
  ],
  [
    "datapack/data/minecraft/tags/function/load.json",
    
"{
  "replace": false,
  "values": [
    "#load:_private/load"
  ]
}"
,
  ],
  [
    "datapack/data/test/function/__init__.mcfunction",
    
"scoreboard objectives add __sandstone dummy [{"text":"Sandstone","color":"gold"}," internals"]
scoreboard players set test load.status 1"
,
  ],
  [
    "datapack/data/test/function/find_one_use.mcfunction",
    "",
  ],
  [
    "datapack/data/test/function/find.mcfunction",
    
"execute store result storage __sandstone:variable anon_qR8pL2nX_0.param_0 int 1 run random value 1..2
execute store result storage __sandstone:variable anon_qR8pL2nX_0.param_1 int 1 run random value 3..4
function test:target with storage __sandstone:variable anon_qR8pL2nX_0"
,
  ],
  [
    "datapack/data/test/function/target.mcfunction",
    "$say $(param_0):$(param_1)",
  ],
]
`;

exports[`OptimizeMacroTemporariesVisitor preserves temporaries that are reused after the macro call 1`] = `
[
  [
    "datapack/data/load/function/_private/init.mcfunction",
    
"# Reset scoreboards so packs can set values accurate for current load.
scoreboard objectives add load.status dummy
scoreboard players reset * load.status"
,
  ],
  [
    "datapack/data/load/tags/function/_private/init.json",
    
"{
  "replace": false,
  "values": [
    "load:_private/init"
  ]
}"
,
  ],
  [
    "datapack/data/load/tags/function/_private/load.json",
    
"{
  "replace": false,
  "values": [
    "#load:_private/init",
    {
      "id": "#load:pre_load",
      "required": false
    },
    {
      "id": "#load:load",
      "required": false
    },
    {
      "id": "#load:post_load",
      "required": false
    }
  ]
}"
,
  ],
  [
    "datapack/data/load/tags/function/load.json",
    
"{
  "replace": false,
  "values": [
    "test:__init__"
  ]
}"
,
  ],
  [
    "datapack/data/load/tags/function/post_load.json",
    
"{
  "replace": false,
  "values": []
}"
,
  ],
  [
    "datapack/data/load/tags/function/pre_load.json",
    
"{
  "replace": false,
  "values": []
}"
,
  ],
  [
    "datapack/data/minecraft/tags/function/load.json",
    
"{
  "replace": false,
  "values": [
    "#load:_private/load"
  ]
}"
,
  ],
  [
    "datapack/data/test/function/__init__.mcfunction",
    
"scoreboard objectives add __sandstone dummy [{"text":"Sandstone","color":"gold"}," internals"]
scoreboard players set test load.status 1"
,
  ],
  [
    "datapack/data/test/function/find_reused.mcfunction",
    "",
  ],
  [
    "datapack/data/test/function/find.mcfunction",
    
"execute store result storage __sandstone:variable anon_qR8pL2nX_1 int 1 run random value 1..2
execute store result storage __sandstone:variable anon_qR8pL2nX_2 int 1 run random value 3..4
data modify storage __sandstone:variable anon_qR8pL2nX_0.param_0 set from storage __sandstone:variable anon_qR8pL2nX_1
data modify storage __sandstone:variable anon_qR8pL2nX_0.param_1 set from storage __sandstone:variable anon_qR8pL2nX_2
function test:target with storage __sandstone:variable anon_qR8pL2nX_0
data get storage __sandstone:variable anon_qR8pL2nX_1"
,
  ],
  [
    "datapack/data/test/function/target.mcfunction",
    "$say $(param_0):$(param_1)",
  ],
]
`;

exports[`OptimizeMacroTemporariesVisitor macro function call snapshot — full output 1`] = `
[
  [
    "datapack/data/load/function/_private/init.mcfunction",
    
"# Reset scoreboards so packs can set values accurate for current load.
scoreboard objectives add load.status dummy
scoreboard players reset * load.status"
,
  ],
  [
    "datapack/data/load/tags/function/_private/init.json",
    
"{
  "replace": false,
  "values": [
    "load:_private/init"
  ]
}"
,
  ],
  [
    "datapack/data/load/tags/function/_private/load.json",
    
"{
  "replace": false,
  "values": [
    "#load:_private/init",
    {
      "id": "#load:pre_load",
      "required": false
    },
    {
      "id": "#load:load",
      "required": false
    },
    {
      "id": "#load:post_load",
      "required": false
    }
  ]
}"
,
  ],
  [
    "datapack/data/load/tags/function/load.json",
    
"{
  "replace": false,
  "values": [
    "test:__init__"
  ]
}"
,
  ],
  [
    "datapack/data/load/tags/function/post_load.json",
    
"{
  "replace": false,
  "values": []
}"
,
  ],
  [
    "datapack/data/load/tags/function/pre_load.json",
    
"{
  "replace": false,
  "values": []
}"
,
  ],
  [
    "datapack/data/minecraft/tags/function/load.json",
    
"{
  "replace": false,
  "values": [
    "#load:_private/load"
  ]
}"
,
  ],
  [
    "datapack/data/test/function/__init__.mcfunction",
    
"scoreboard objectives add __sandstone dummy [{"text":"Sandstone","color":"gold"}," internals"]
scoreboard players set test load.status 1"
,
  ],
  [
    "datapack/data/test/function/find_full.mcfunction",
    "",
  ],
  [
    "datapack/data/test/function/find.mcfunction",
    
"execute store result storage __sandstone:variable anon_qR8pL2nX_0.param_0 int 1 run random value 1..2
execute store result storage __sandstone:variable anon_qR8pL2nX_0.param_1 int 1 run random value 3..4
function test:target with storage __sandstone:variable anon_qR8pL2nX_0"
,
  ],
  [
    "datapack/data/test/function/target.mcfunction",
    "$say $(param_0):$(param_1)",
  ],
]
`;
